--- a/main.css
+++ b/main.css
@@ -173,7 +173,9 @@ a{
 	border:1px lightgray;
 }
 #inner-card-1{
-	background-image:("porfolio/Screenshot (2).png");
+	background-image:url("Screenshot (2).png");
+	background-position:center;
+	background-size:cover;
 	width:80vw;
 	height:50vw;
 	border-radius:10px;
